--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           # - Each init container must complete successfully before the next one starts.
       containers:
       - name:  TestConsumer1
-        image:  MYAPP:latest
+        image:  YourACRInstanceNameHere.azurecr.io/azure-eh-kafka-test-consumer:latest
         resources:
           requests:
             cpu: 100m
@@ -57,16 +57,21 @@ spec:
             configMapKeyRef:
               name: eh-config
               key: BOOTSTRAP_SERVER
-        - name: CONSUMER_GROUP_NAME
-          valueFrom:
-            configMapKeyRef:
-              name: eh-config
-              key: CONSUMER_GROUP_NAME
         - name: TOPIC_NAME
           valueFrom:
             configMapKeyRef:
               name: eh-config
               key: TOPIC_NAME
+        - name: CONSUMER_GROUP_NAME
+          valueFrom:
+            configMapKeyRef:
+              name: eh-config
+              key: CONSUMER_GROUP_1
+        - name: SASL_JAAS_CONFIG
+          valueFrom:
+            secretKeyRef:
+              name: eh-secrets
+              key: SASL_JAAS_CONFIG
         ports:
         - containerPort:  80
           name:  TestConsumer1
