--- a/deploy/manifests/eh-secrets.yaml
+++ b/deploy/manifests/eh-secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: eh-secrets
+  namespace: kafka-eh-perf
 type: Opaque
 data:
-  SASL_JAAS_CONFIG: <base64_encoded_value>
+  SASL_JAAS_CONFIG: base64EncodedSASLJAASHere
