--- a/deploy/manifests/eh-config-map.yaml
+++ b/deploy/manifests/eh-config-map.yaml
@@ -6,6 +6,12 @@ metadata:
 data:
   BOOTSTRAP_SERVER: sofio-ce-eh.servicebus.windows.net:9093
   TOPIC_NAME: cibc-test
+  NUM_PRODUCER_THREADS: "10"
+  MESSAGE_SIZE_IN_BYTES: "512"
+  TARGET_RECORDS_PER_SECOND: "1000"
+  NUM_CONSUMER_GROUP_THREADS: "1"
+  NUM_RECORDS_TO_READ_BEFORE_COMMIT: "0"
+  SHOULD_START_FROM_END: "true"
   CONSUMER_GROUP_1: cg1
   CONSUMER_GROUP_2: cg2
   CONSUMER_GROUP_3: cg3
